--- a/clusterIssuer/clusterIssuer-acme.yaml
+++ b/clusterIssuer/clusterIssuer-acme.yaml
@@ -1,7 +1,7 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
-  name: clusterIssuer-acme
+  name: clusterissuer-acme
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
