--- a/clusterIssuer/clusterIssuer-ca.yaml
+++ b/clusterIssuer/clusterIssuer-ca.yaml
@@ -1,7 +1,7 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
-  name: clusterIssuer-ca
+  name: clusterissuer-ca
 spec:
   ca:
     secretName: ca-keys-secret
