--- a/test/certificate-cluster-ca.yaml
+++ b/test/certificate-cluster-ca.yaml
@@ -1,7 +1,7 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: certificate-ca
+  name: certificate-cluster-ca
 spec:
   secretName: certificate-cluster-ca-secret
   duration: 24h
